<resources>
    <string name="app_name">IAISchedule</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Paramètres</string>
    <string name="cours">cours</string>
    <string name="backup_restore">Backup/Restore</string>
    <string name="title_activity_controle_presence">Fiche de Presence</string>
    <string name="envoyer">Envoyer</string>
    <string name="title_activity_login">Connexion</string>

    <!-- Strings related to login -->
    <string name="prompt_nom">Nom</string>
    <string name="prompt_prenom">Prenom</string>
    <string name="prompt_telephone">Télephone (optionnel)</string>
    <string name="action_sign_in">Connexion</string>
    <string name="action_sign_in_short">Connexion</string>
    <string name="action_incorrect_field">Champs incorrect</string>
    <string name="error_invalid_email">Le champ est invalide, au moins 2 caractere</string>
    <string name="error_invalid_password">Taille de numero du téléphone incorrect </string>
    <string name="error_incorrect_password">Le mot de passe est incorrect</string>
    <string name="error_field_required">Le champ est obligatoire</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="f_minin">Féminin</string>
    <string name="masculin">Masculin</string>
    <string name="title_activity_memo_schedule">Memo Schedule</string>
    <string name="large_text">
        "Copyrights BDDR IAI 2017-2018.\n\n"
    </string>
    <string name="info">Info et numéro de téléphone</string>
    <string name="ajouter_une_note">Ajouter une note</string>
    <string name="lundi">L</string>
    <string name="mardi">M</string>
    <string name="mercredi">M</string>
    <string name="jeudi">J</string>
    <string name="vendredi">V</string>
    <string name="samedi">S</string>
    <string name="all">All</string>
    <string name="action_actualiser">Actualiser</string>
    <string name="title_activity_valid_presence">Validation de contrôle de presence</string>
    <string name="action_valider">Valider</string>
    <string name="prompt_mdp">Mot de passe</string>
    <string name="title_activity_info">Info</string>
    <string name="title_activity_settings">Réglages</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_sauvegarde">Sauvegarde</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Fréquence de synchronisation</string>
    <string-array name="pref_sync_frequency_titles">
        <item>1 minute</item>
        <item>5 minutes</item>
        <item>1 heure</item>
        <item>2 heures</item>
        <item>Jamais</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>1</item>
        <item>5</item>
        <item>60</item>
        <item>120</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_silencieux">Mode silencieux</string>

    <string name="pref_title_message_notifications">Notifications</string>

    <string name="pref_title_ringtone">Sonnerie</string>
    <string name="pref_ringtone_silent">Silence</string>

    <string name="pref_title_vibrate">Vibreur</string>
    <string name="pref_header_notificate_activaite">Activer les notifications</string>
</resources>
