<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="notifications_mode"
        android:summary="Activer les notifications pour les cours, les examens et les mémo dans la barre de notification"
        android:title="@string/pref_header_notificate_activaite" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="1"
        android:dependency="notifications_mode"
        android:entries="@array/pref_sync_frequency_titles"
        android:entryValues="@array/pref_sync_frequency_values"
        android:key="sync_frequency"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_sync_frequency" />


    <SwitchPreference
        android:defaultValue="true"
        android:dependency="notifications_mode"
        android:key="notifications_vibrate"
        android:title="@string/pref_title_vibrate" />


</PreferenceScreen>
