<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->
    <SwitchPreference
        android:defaultValue="true"
        android:key="silence_mode"
        android:summary="Mettre l'appareil en mode silencieux pendant les cours"
        android:title="@string/pref_header_silencieux" />

    <!-- Allows the user to choose a ringtone in the 'notification' category. -->
    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
    <RingtonePreference
        android:defaultValue="content://settings/system/notification_sound"
        android:dependency="silence_mode"
        android:key="silence_ringtone"
        android:ringtoneType="ringtone"
        android:title="@string/pref_title_ringtone" />

    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <SwitchPreference
        android:defaultValue="true"
        android:dependency="silence_mode"
        android:key="silence_vibrate"
        android:title="@string/pref_title_vibrate" />

</PreferenceScreen>
